examples/invalid/program21.c
int f() {
    return 5;
}

int main() {
    int x;
    x = f(10);
    return x;
}

